--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,10 @@
 		text-align: center;
 	}
 
+	.box img {
+		width: 40px;
+	}
+
 @media only screen and (min-width: 768px) {
   /* For desktop: */
 
