--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,5 @@
 @media only screen and (max-width: 800px) {
   body {
-    background-color: lightblue;
     margin: 0px;
   }
 
@@ -8,14 +7,33 @@
 /* For mobile phones: */
   .banner {
 		text-align: center;
+		background-color: black;
+		color: white;	
 	}
 
+	.banner h1{
+		padding: 5px;
+		padding-top: 60px;
+		font-size: 50px;
+	}
+
+	.banner h2{
+		padding-bottom: 50px;
+		font-size: 20px;
+		font-weight	: normal;
+	}
 	
 	.section2 {
 		text-align: center;
 	}
 
-	
+	.box {
+		height: 300px;
+		padding:  20px;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		color: white;
+	}
 
 	.box img {
 		width: 40px;
@@ -44,7 +62,7 @@
 	.banner h2{
 		padding-bottom: 50px;
 		font-size: 30px;
-		font-weight: normal;
+		font-weight	: normal;
 	}
 
 	
