--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,9 @@
 
 
 /* For mobile phones: */
+
+
+	/* Banner  */
   .banner {
 		text-align: center;
 		background-color: black;
@@ -23,6 +26,8 @@
 		font-weight	: normal;
 	}
 	
+
+	/* Section 2  */
 	.section2 {
 		text-align: center;
 	}
@@ -39,6 +44,39 @@
 		width: 40px;
 	}
 
+	/* Section 3 */
+
+	.section3{
+		display: inline-block;
+		background-color: black;
+		color: white;
+		padding-top: 20px;
+		width: 100%;
+
+	}
+
+	.section3 h2{
+		color: black;
+	}
+
+	.section3 h1{
+		margin: 20px;
+		font-size: 40px;
+		text-align: center;
+	}
+
+	.section3 ul{
+		padding-left: 15%;
+		padding-right: 15%;
+		padding-top: 20px;
+		padding-bottom: 20px;
+	}
+	.section3 li{
+		font-size: 18px;
+		line-height: 60px;
+		font-weight: normal;
+	}
+
 }
 
 @media only screen and (min-width: 800px) {
@@ -46,11 +84,16 @@
 
   	body{
   		margin: 0px;
+  		padding: 0px;
+  		font-family: sans-serif;
   	}
+
+  	/* Banner  */
 	  .banner {
 		text-align: center;
 		background-color: black;
 		color: white;
+
 	}
 
 	.banner h1{
@@ -66,8 +109,11 @@
 	}
 
 	
+
+	/* Section 2  */
 	.section2 {
 		text-align: center;
+
 	}
 
 	.box {
@@ -92,6 +138,39 @@
 		text-align: center;
 		padding: 20%;
 		font-size: 25px;
+	}
+
+	/* Section 3 */
+
+	.section3{
+		display: inline-block;
+		background-color: black;
+		color: white;
+		padding-top: 20px;
+		width: 100%;
+
+	}
+
+	.section3 h2{
+		color: black;
+	}
+
+	.section3 h1{
+		margin: 20px;
+		font-size: 40px;
+		text-align: center;
+	}
+
+	.section3 ul{
+		padding-left: 35%;
+		padding-right: 35%;
+		padding-top: 20px;
+		padding-bottom: 20px;
+	}
+	.section3 li{
+		font-size: 22px;
+		line-height: 50px;
+		font-weight: normal;
 	}
 
 
