--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,7 @@
 	}
 
 	.banner h1{
+		margin-top: 0px;
 		padding: 5px;
 		padding-top: 60px;
 		font-size: 50px;
@@ -79,6 +80,7 @@
 
 
 	/* Section 4  */
+
 	.section4 h1 {
 		text-align: center;
 		font-size: 40px;
@@ -86,12 +88,22 @@
 
 
 	.Approach_p {
+		display: inline-block;
+
 		padding-left: 7%;
 		padding-right: 7%;
-		font-size: 20px;
+		font-size: 18px;
 		height: 25px;
 	}
 
+	footer{
+	padding-top: 2%;
+	padding-bottom: 2%;
+	padding-right: 2%;
+	padding-left: 2%;
+	font-size: 10px;
+	text-align: center;
+	}
 }
 
 @media only screen and (min-width: 800px) {
