--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,22 @@
+
+
 @media only screen and (max-width: 800px) {
-  body {
+  html,body {
     margin: 0px;
     padding: 0px;
+   
   }
 
-
+  .banner:{
+  	top: 0px;
+  	margin: 0px;
+  }
 /* For mobile phones: */
 
 	.nav{
 		position: absolute;
 		padding: 0px;
-		top: 35px;
+		top:20px;
 		width: 100%;
 		height: 35px;
 	}
@@ -52,13 +58,16 @@
 	}
 
 	.banner h1{
+		position: relative;
+		display: inline;
+		top: 40px;
 		margin-top: 0px;
-		padding: 5px;
-		padding-top: 60px;
 		font-size: 50px;
 	}
 
 	.banner h2{
+		position: relative;
+		top: 45px;
 		padding-bottom: 50px;
 		font-size: 20px;
 		font-weight	: normal;
