--- a/css/index.css
+++ b/css/index.css
@@ -57,6 +57,11 @@
 		color: white;	
 	}
 
+	.banner-title{
+  		animation: backInLeft; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 2s; /* don't forget to set a duration! */
+  	}
+
 	.banner h1{
 		position: relative;
 		display: inline;
