--- a/css/index.css
+++ b/css/index.css
@@ -90,7 +90,7 @@
 
 	.twitter-title{
 		text-align: center;
-		background-color: #a3a3a3;
+		background-color: black;
 		color: white;
 		margin: 0px;
 		padding: 15px 0px;
@@ -329,7 +329,7 @@
 	.twitter-title{
 		text-align: center;
 		font-size: 50px;
-		background-color: #a3a3a3;
+		background-color: black;
 		color: white;
 		margin: 0px;
 		padding: 35px 0px;
